--- a/RFE SELECT FEATURES.ipynb
+++ b/RFE SELECT FEATURES.ipynb
@@ -55,10 +55,7 @@
     "    clf = DecisionTreeClassifier(random_state=0)\n",
     "    selector = RFE(clf, 1, step=1)\n",
     "    selector = selector.fit(df, y_all)\n",
-    "    #selector.support_ \n",
     "    pos=selector.ranking_\n",
-    "    #clf.get_params()\n",
-    "    #print('Indices de importancia de features que influyen en el precio, 1: mas importante',pos)\n",
     "    return pos"
    ]
   },
@@ -95,7 +92,6 @@
     "                    break\n",
     "            i=i+1\n",
     "    print('Set of selected features : ',new_data)\n",
-    "    \n",
     "    return sorted(new_data)"
    ]
   },
@@ -127,20 +123,11 @@
     "    results=[]\n",
     "    index_col=[]\n",
     "    for no_features in range(1,df.shape[1]+1):\n",
-    "        #if no_features>0:\n",
     "        cols=select_features(no_features,df,y)\n",
     "        df_new=df[cols]\n",
     "        r=model_selection(df_new,y)\n",
-    "            #if no_features==1:\n",
-    "            #    results.append(r)\n",
-    "            #    print(results)\n",
-    "            #else:\n",
-    "            #    results.append(r.mean())\n",
     "        results.append(r.mean())\n",
-    "            #print('resultado: ', results)\n",
-    "            #index_col.append(no_features)\n",
-    "            #print('indice: ',index_col)\n",
-    "    return results#,index_col"
+    "    return results"
    ]
   },
   {
